syntax = "proto3";

enum TAG_CS
{
	TAG_SC_DUMMY = 0;
	TAG_CS_LOGIN = 1;
	TAG_CS_MOVE = 2;
	TAG_CS_ATTACK = 3;
	TAG_CS_LOGOUT = 4;
	TAG_CS_PLAYERSTATE= 5;
	TAG_CS_CHARMOVE = 6;
	TAG_CS_PLAYERANIMSTATE = 7;
}

enum TAG_SC
{	
	TAG_CS_DUMMY = 0;
	TAG_SC_CONNECTSUCCESS = 1;
	TAG_SC_OTHERCLIENTLOGIN  = 2;
	TAG_SC_MOVEFAILED = 3;
	TAG_SC_CHARMOVE  = 4;
	TAG_SC_VIEWINRANGE = 5;
	TAG_SC_PLAYERSTATE = 6;
	TAG_SC_SELFPLAYERMOVE = 7;
	TAG_SC_PLAYERANIMSTATE = 8;
}

enum TAG_CHAR
{
	TAG_DUMMY = 0;
	TAG_MAINPLAYER = 1;
	TAG_OTHERPLAYER = 2;
	TAG_MUMMY = 3;
}

enum TAG_PLAYERTYPE
{
	TAG_WARRIOR = 0;
	TAG_ARCHOR = 1;
	TAG_MAGICAIN = 2;
}

enum TAG_MUMMYANIM
{
		MUMMY_IDLE = 0;
		MUMMY_MOVE = 1;
		MUMMY_ATTACK = 2; 
		MUMMY_DEATH = 3; 
		MUMMY_HIT = 4;
		MUMMY_SLEEP = 5;
		MUMMY_AWAKE = 6;
		MUMMY_TAUNT = 7;
}